h1. Release Notes for Sirius Desktop

{toc:style=disc|minLevel=2|maxLevel=3}

This document contains the release notes for recent major releases of Sirius. See also "the release notes from previous versions":Release_Notes_Previous.html for details about older releases.

h2(#sirius7.4.0). Changes in Sirius  Desktop 7.4.0

h3. User-Visible Changes

* <span class="label label-success">Added</span> Copy and paste style from one diagram element to another. The copied and pasted diagram elements may be of different types. The style properties are applied at best. You can refer to the "paste style documentation":user/diagrams/Diagrams.html#paste_style for more details.
* <span class="label label-info">Modified</span> The 3 other existing pastes (@Paste Format@, @Paste Style@ and @Paste Layout@) are now called semantic paste (i.e. @Paste Format (Semantic)@, @Paste Style (Semantic)@ and @Paste Layout (Semantic)@), but their behavior remains unchanged.
* <span class="label label-danger">Removed</span> Feature @Apply the applicable appearance properties of the last selected shape to the other selected shapes.@ has been removed. Use the new style copy-paste feature, which does the same thing.
* <span class="label label-success">Added</span> A checkbox to ignore the pinning of elements on the diagram for the layout actions.
* <span class="label label-success">Added</span> A new layout action to layout the direct children of the selection on a diagram.
* <span class="label label-info">Modified</span> The layout of border nodes is now available for the selection (in addition to the whole diagram).
* <span class="label label-info">Modified</span> Arrange actions have been renamed from "Arrange <...>" to "Layout <...>".
* <span class="label label-info">Modified</span> The pin and unpin actions are now combined into a single checkbox action.