@@ -13,7 +13,7 @@
 				<a href="#ReleaseNotesforSiriusDesktop">Release Notes for Sirius Desktop</a>
 				<ol style="list-style: disc;">
 					<li>
-						<a href="#sirius7.4.0">Changes in Sirius  Desktop 7.4.0</a>
+						<a href="#sirius7.4.1">Changes in Sirius  Desktop 7.4.1</a>
 						<ol style="list-style: disc;">
 							<li>
 								<a href="#UserVisibleChanges">User-Visible Changes</a>
@@ -27,7 +27,7 @@
 						</ol>
 					</li>
 					<li>
-						<a href="#sirius7.3.0">Changes in Sirius 7.3.0</a>
+						<a href="#sirius7.4.0">Changes in Sirius  Desktop 7.4.0</a>
 						<ol style="list-style: disc;">
 							<li>
 								<a href="#UserVisibleChanges2">User-Visible Changes</a>
@@ -41,7 +41,7 @@
 						</ol>
 					</li>
 					<li>
-						<a href="#sirius7.2.1">Changes in Sirius 7.2.1</a>
+						<a href="#sirius7.3.0">Changes in Sirius 7.3.0</a>
 						<ol style="list-style: disc;">
 							<li>
 								<a href="#UserVisibleChanges3">User-Visible Changes</a>
@@ -55,7 +55,7 @@
 						</ol>
 					</li>
 					<li>
-						<a href="#sirius7.2.0">Changes in Sirius 7.2.0</a>
+						<a href="#sirius7.2.1">Changes in Sirius 7.2.1</a>
 						<ol style="list-style: disc;">
 							<li>
 								<a href="#UserVisibleChanges4">User-Visible Changes</a>
@@ -69,7 +69,7 @@
 						</ol>
 					</li>
 					<li>
-						<a href="#sirius7.1.0">Changes in Sirius 7.1.0</a>
+						<a href="#sirius7.2.0">Changes in Sirius 7.2.0</a>
 						<ol style="list-style: disc;">
 							<li>
 								<a href="#UserVisibleChanges5">User-Visible Changes</a>
@@ -83,10 +83,24 @@
 						</ol>
 					</li>
 					<li>
-						<a href="#sirius7.0.4">Changes in Sirius 7.0.4</a>
+						<a href="#sirius7.1.0">Changes in Sirius 7.1.0</a>
 						<ol style="list-style: disc;">
 							<li>
 								<a href="#UserVisibleChanges6">User-Visible Changes</a>
+							</li>
+							<li>
+								<a href="#SpecifierVisibleChanges6">Specifier-Visible Changes</a>
+							</li>
+							<li>
+								<a href="#DeveloperVisibleChanges6">Developer-Visible Changes</a>
+							</li>
+						</ol>
+					</li>
+					<li>
+						<a href="#sirius7.0.4">Changes in Sirius 7.0.4</a>
+						<ol style="list-style: disc;">
+							<li>
+								<a href="#UserVisibleChanges7">User-Visible Changes</a>
 							</li>
 						</ol>
 					</li>
@@ -94,7 +108,7 @@
 						<a href="#sirius7.0.3">Changes in Sirius 7.0.3</a>
 						<ol style="list-style: disc;">
 							<li>
-								<a href="#DeveloperVisibleChanges6">Developer-Visible Changes</a>
+								<a href="#DeveloperVisibleChanges7">Developer-Visible Changes</a>
 							</li>
 						</ol>
 					</li>
@@ -102,10 +116,10 @@
 						<a href="#sirius7.0.2">Changes in Sirius 7.0.2</a>
 						<ol style="list-style: disc;">
 							<li>
-								<a href="#SpecifierVisibleChanges6">Specifier-Visible Changes</a>
+								<a href="#SpecifierVisibleChanges7">Specifier-Visible Changes</a>
 							</li>
 							<li>
-								<a href="#DeveloperVisibleChanges7">Developer-Visible Changes</a>
+								<a href="#DeveloperVisibleChanges8">Developer-Visible Changes</a>
 							</li>
 						</ol>
 					</li>
@@ -113,23 +127,12 @@
 						<a href="#sirius7.0.1">Changes in Sirius 7.0.1</a>
 						<ol style="list-style: disc;">
 							<li>
-								<a href="#DeveloperVisibleChanges8">Developer-Visible Changes</a>
-							</li>
-						</ol>
-					</li>
-					<li>
-						<a href="#sirius7.0.0">Changes in Sirius 7.0.0</a>
-						<ol style="list-style: disc;">
-							<li>
-								<a href="#UserVisibleChanges7">User-Visible Changes</a>
-							</li>
-							<li>
 								<a href="#DeveloperVisibleChanges9">Developer-Visible Changes</a>
 							</li>
 						</ol>
 					</li>
 					<li>
-						<a href="#sirius6.6.0">Changes in Sirius 6.6.0</a>
+						<a href="#sirius7.0.0">Changes in Sirius 7.0.0</a>
 						<ol style="list-style: disc;">
 							<li>
 								<a href="#UserVisibleChanges8">User-Visible Changes</a>
@@ -140,10 +143,21 @@
 						</ol>
 					</li>
 					<li>
+						<a href="#sirius6.6.0">Changes in Sirius 6.6.0</a>
+						<ol style="list-style: disc;">
+							<li>
+								<a href="#UserVisibleChanges9">User-Visible Changes</a>
+							</li>
+							<li>
+								<a href="#DeveloperVisibleChanges11">Developer-Visible Changes</a>
+							</li>
+						</ol>
+					</li>
+					<li>
 						<a href="#sirius6.5.1">Changes in Sirius 6.5.1</a>
 						<ol style="list-style: disc;">
 							<li>
-								<a href="#DeveloperVisibleChanges11">Developer-Visible Changes</a>
+								<a href="#DeveloperVisibleChanges12">Developer-Visible Changes</a>
 							</li>
 						</ol>
 					</li>
@@ -151,13 +165,13 @@
 						<a href="#sirius6.5.0">Changes in Sirius 6.5.0</a>
 						<ol style="list-style: disc;">
 							<li>
-								<a href="#UserVisibleChanges9">User-Visible Changes</a>
+								<a href="#UserVisibleChanges10">User-Visible Changes</a>
 							</li>
 							<li>
-								<a href="#SpecifierVisibleChanges7">Specifier-Visible Changes</a>
+								<a href="#SpecifierVisibleChanges8">Specifier-Visible Changes</a>
 							</li>
 							<li>
-								<a href="#DeveloperVisibleChanges12">Developer-Visible Changes</a>
+								<a href="#DeveloperVisibleChanges13">Developer-Visible Changes</a>
 							</li>
 						</ol>
 					</li>
@@ -167,8 +181,12 @@
 		<p>This document contains the release notes for recent major releases of Sirius. See also 
 			<a href="Release_Notes_Previous.html">the release notes from previous versions</a> for details about older releases.
 		</p>
-		<h2 id="sirius7.4.0">Changes in Sirius  Desktop 7.4.0</h2>
+		<h2 id="sirius7.4.1">Changes in Sirius  Desktop 7.4.1</h2>
 		<h3 id="UserVisibleChanges">User-Visible Changes</h3>
+		<h3 id="SpecifierVisibleChanges">Specifier-Visible Changes</h3>
+		<h3 id="DeveloperVisibleChanges">Developer-Visible Changes</h3>
+		<h2 id="sirius7.4.0">Changes in Sirius  Desktop 7.4.0</h2>
+		<h3 id="UserVisibleChanges2">User-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-success">Added</span> Copy and paste style from one diagram element to another. The copied and pasted diagram elements may be of different types. The style properties are applied at best. You can refer to the 
 				<a href="user/diagrams/Diagrams.html#paste_style">paste style documentation</a> for more details.
@@ -205,7 +223,7 @@
 			</li>
 			<li><span class="label label-info">Modified</span> Diagram export as SVG image has been improved. It is now repeatable as long as resources are the same. Previously some XML ID were generated using random mechanism.</li>
 		</ul>
-		<h3 id="SpecifierVisibleChanges">Specifier-Visible Changes</h3>
+		<h3 id="SpecifierVisibleChanges2">Specifier-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-info">Modified</span> Upgraded ELK version from 0.7.1 to 0.9.0, see the 
 				<a href="https://eclipse.dev/elk/downloads/releasenotes/release-0.9.0.html">ELK documentation</a> for the list of changes in that version (and previous). Due to improvements or refactoring in ELK, some configuration option identifiers have been renamed or deleted. An automatic migration has been added in Sirius to migrate these identifiers used in VSM (see Migrations section for detail). In any case, if your modeler uses an ELK layout, you must be careful.
@@ -221,7 +239,7 @@
 			</li>
 			<li><span class="label label-info">Modified</span> The SquareDescription can now have -1 value for height and width. If the value -1 is used for both width and height enable the &#8220;auto-size&#8221; mode.</li>
 		</ul>
-		<h3 id="DeveloperVisibleChanges">Developer-Visible Changes</h3>
+		<h3 id="DeveloperVisibleChanges2">Developer-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-danger">Removed</span> AbstractTabbarContributor.createCopyAppearancePropertiesContribution and TabbarContributionFactory.createCopyAppearancePropertiesContribution has been removed.</li>
 			<li><span class="label label-success">Added</span> The SiriusStyleClipboard singleton to store the style clipboard data for the diagram elements.</li>
@@ -348,12 +366,12 @@
 			</li>
 		</ul>
 		<h2 id="sirius7.3.0">Changes in Sirius 7.3.0</h2>
-		<h3 id="UserVisibleChanges2">User-Visible Changes</h3>
+		<h3 id="UserVisibleChanges3">User-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-success">Added</span> A new preference has been added in the Sirius Diagram preference page. This preference allows the user to choose the arrangement of elements created on a diagram when they are not directly positioned by the user. In the preference page, users can choose between a diagonal, vertical or horizontal arrangement.</li>
 		</ul>
-		<h3 id="SpecifierVisibleChanges2">Specifier-Visible Changes</h3>
-		<h3 id="DeveloperVisibleChanges2">Developer-Visible Changes</h3>
+		<h3 id="SpecifierVisibleChanges3">Specifier-Visible Changes</h3>
+		<h3 id="DeveloperVisibleChanges3">Developer-Visible Changes</h3>
 		<h4 id="Changesinorg.eclipse.sirius.diagram.ui2">Changes in 
 			<code>org.eclipse.sirius.diagram.ui</code>
 		</h4>
@@ -380,13 +398,13 @@
     diagramPreferences.putBoolean(SiriusDiagramUiPreferencesKeys.@PREF_NEWLY_CREATED_ELEMENTS_LAYOUT@, 2);
 </code></pre>
 		<h2 id="sirius7.2.1">Changes in Sirius 7.2.1</h2>
-		<h3 id="UserVisibleChanges3">User-Visible Changes</h3>
+		<h3 id="UserVisibleChanges4">User-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-info">Modified</span> Sequence diagrams are now correctly identified in the Sirius Session Details report (accessible with the &#8220;Properties&#8221; dialog on an aird file).</li>
 			<li><span class="label label-info">Modified</span> When a semantic modification is made on a diagram (e.g. Drag and Drop of an element), the notes and texts attached to the element remain attached, and the notes and texts contained in the element are preserved as much as possible.</li>
 			<li><span class="label label-info">Modified</span> When an element is deleted after drag and drop, its attached notes and texts are also removed if preference &#8220;Remove/hide note when the annotated element is removed/hidden&#8221; is enabled.</li>
 		</ul>
-		<h3 id="SpecifierVisibleChanges3">Specifier-Visible Changes</h3>
+		<h3 id="SpecifierVisibleChanges4">Specifier-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-info">Modified</span> Three system properties have been added to allow the enablement of layout customizations for Regions (containers whose parent has a Children Presentation attribute set to Horizontal Stack or Vertical Stack): 
 				<ul>
@@ -411,7 +429,7 @@
 				</ul>
 			</li>
 		</ul>
-		<h3 id="DeveloperVisibleChanges3">Developer-Visible Changes</h3>
+		<h3 id="DeveloperVisibleChanges4">Developer-Visible Changes</h3>
 		<h4 id="Changesinorg.eclipse.sirius.diagram.ui3">Changes in 
 			<code>org.eclipse.sirius.diagram.ui</code>
 		</h4>
@@ -436,11 +454,11 @@
 			</li>
 		</ul>
 		<h2 id="sirius7.2.0">Changes in Sirius 7.2.0</h2>
-		<h3 id="UserVisibleChanges4">User-Visible Changes</h3>
+		<h3 id="UserVisibleChanges5">User-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-info">Modified</span> Java 17 (or later) is now required to run Sirius.</li>
 		</ul>
-		<h3 id="SpecifierVisibleChanges4">Specifier-Visible Changes</h3>
+		<h3 id="SpecifierVisibleChanges5">Specifier-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-success">Added</span> New decorators are now available for the beginning and edge of edges: 
 				<code>CirclePlus</code>, 
@@ -451,12 +469,12 @@
 				<code>InputArrowWithFillDiamondAndDot</code>.
 			</li>
 		</ul>
-		<h3 id="DeveloperVisibleChanges4">Developer-Visible Changes</h3>
+		<h3 id="DeveloperVisibleChanges5">Developer-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-info">Modified</span> Java 17 is required as BREE and source level.</li>
 		</ul>
 		<h2 id="sirius7.1.0">Changes in Sirius 7.1.0</h2>
-		<h3 id="UserVisibleChanges5">User-Visible Changes</h3>
+		<h3 id="UserVisibleChanges6">User-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-success">Added</span> In a tree editor, if the 
 				<code>Shift</code> key is pressed during using the 
@@ -484,7 +502,7 @@
 			<li><span class="label label-info">Modified</span> The Sirius Session Details report (accessible with the &#8220;Properties&#8221; dialog on an aird file) is updated to always show the dependencies even for a not opened Session. The general dependencies are computed from serialized data. The image project dependencies are computed from the opened session or from the serialized data if the Session is not opened. A button is available to update image project dependencies.</li>
 			<li><span class="label label-info">Modified</span> The Copy action is now visible in the tabbar, of a diagram editor, when no diagram element is selected, before it was visible only when at least one diagram element is selected. And the drop-down menu for Paste actions is now visible in the tabbar, of a diagram editor, when at least one diagram element is selected, before it was visible only when no diagram element is selected. </li>
 		</ul>
-		<h3 id="SpecifierVisibleChanges5">Specifier-Visible Changes</h3>
+		<h3 id="SpecifierVisibleChanges6">Specifier-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-success">Added</span> The system property 
 				<code>org.eclipse.sirius.ui.enableCreatedElementsConstraintInSelectElementsListener</code> has been added to allow to ignore the &#8220;created elements&#8221; constraint when the 
@@ -503,7 +521,7 @@
 				<code>aql:input.getContextSelections()</code>.
 			</li>
 		</ul>
-		<h3 id="DeveloperVisibleChanges5">Developer-Visible Changes</h3>
+		<h3 id="DeveloperVisibleChanges6">Developer-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-success">Added</span> The interface 
 				<code>org.eclipse.sirius.ecore.extender.business.api.permission.IPermissionAuthority</code> now has a 
@@ -605,24 +623,24 @@
 			</li>
 		</ul>
 		<h2 id="sirius7.0.4">Changes in Sirius 7.0.4</h2>
-		<h3 id="UserVisibleChanges6">User-Visible Changes</h3>
+		<h3 id="UserVisibleChanges7">User-Visible Changes</h3>
 		<p>Minor release to avoid errors thrown during indirect deletion of edges whose label is selected (deletion done from outside the diagram editor or from a custom command).</p>
 		<h2 id="sirius7.0.3">Changes in Sirius 7.0.3</h2>
-		<h3 id="DeveloperVisibleChanges6">Developer-Visible Changes</h3>
+		<h3 id="DeveloperVisibleChanges7">Developer-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-danger">Removed</span> To ensure compatibility with Eclipse 2022-09, dependency to 
 				<code>com.ibm.icu</code> has been removed.
 			</li>
 		</ul>
 		<h2 id="sirius7.0.2">Changes in Sirius 7.0.2</h2>
-		<h3 id="SpecifierVisibleChanges6">Specifier-Visible Changes</h3>
+		<h3 id="SpecifierVisibleChanges7">Specifier-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-success">Added</span> The variables 
 				<code>edgeView</code> and 
 				<code>otherEnd</code> are now also available during precondition evaluation of a reconnect tool. Before, these variables were available only during the reconnection tool execution.
 			</li>
 		</ul>
-		<h3 id="DeveloperVisibleChanges7">Developer-Visible Changes</h3>
+		<h3 id="DeveloperVisibleChanges8">Developer-Visible Changes</h3>
 		<h4 id="Changesinorg.eclipse.sirius3">Changes in 
 			<code>org.eclipse.sirius</code>
 		</h4>
@@ -650,7 +668,7 @@
 			</li>
 		</ul>
 		<h2 id="sirius7.0.1">Changes in Sirius 7.0.1</h2>
-		<h3 id="DeveloperVisibleChanges8">Developer-Visible Changes</h3>
+		<h3 id="DeveloperVisibleChanges9">Developer-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-info">Modified</span> The behavior concerning SVG images export has been improved. You can refer to 
 				<a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=578509">bugzilla 578509</a> for more details. This behavior is activated by default but you may disable it by setting the system property 
@@ -659,7 +677,7 @@
 			</li>
 		</ul>
 		<h2 id="sirius7.0.0">Changes in Sirius 7.0.0</h2>
-		<h3 id="UserVisibleChanges7">User-Visible Changes</h3>
+		<h3 id="UserVisibleChanges8">User-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-success">Added</span> Some enhancement have been done about the images management.
 				<ul>
@@ -676,7 +694,7 @@
 			<li><span class="label label-info">Modified</span> It is now possible to move a regions container by moving one of its region with the &#8220;Ctrl&#8221; shortcut key pressed. In the same way, it is now possible to select a regions container by clicking on one of its region with the &#8220;Ctrl&#8221; shortcut key pressed.</li>
 			<li><span class="label label-danger">Removed</span> It is no longer possible to change the workspace image of a diagram element with an image from an internal plugin via the &#8220;Set style to workspace image&#8221; action. This functionality affects a very small part of the use cases. The new UI of the &#8220;Set style to workspace image&#8221; action does not support this advanced functionality. However, it is still possible to go through Properties &gt; Style &gt; Workspace Image, then paste the path of the internal plugin image.</li>
 		</ul>
-		<h3 id="DeveloperVisibleChanges9">Developer-Visible Changes</h3>
+		<h3 id="DeveloperVisibleChanges10">Developer-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-success">Added</span> Sirius core and dialects metamodels have been extracted in new 
 				<b>.model</b> plugins with minimum dependencies. Each new plugin is re-exported by the plugin which was the previous container of its metamodel. The base packages of the generated code has not been modified. Each API modification is listed in the corresponding plugin section. Additional dialect providers and extension providers might have to modify the path or references to Sirius .ecore and .genmodel files to reflect this change. The new plugins are:
@@ -1003,7 +1021,7 @@
 			</li>
 		</ul>
 		<h2 id="sirius6.6.0">Changes in Sirius 6.6.0</h2>
-		<h3 id="UserVisibleChanges8">User-Visible Changes</h3>
+		<h3 id="UserVisibleChanges9">User-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-success">Added</span> 4 new actions have been added to control the &#8220;z-order&#8221; of edges. These actions are mainly useful in the context of 
 				<a href="user/diagrams/Diagrams.html#Appearance">jump links</a>. Similar actions already existed for nodes but not for edges. A chapter dedicated to these new actions has been added in 
@@ -1011,7 +1029,7 @@
 			</li>
 			<li><span class="label label-danger">Removed</span> To be coherent, the actions available &#8220;Diagram/Order&#8221; menu of Eclipse menu bar have been removed. Indeed, these actions are always visible but only valid for nodes. Now, only the contextual menus are to be used (for nodes or for edges).</li>
 		</ul>
-		<h3 id="DeveloperVisibleChanges10">Developer-Visible Changes</h3>
+		<h3 id="DeveloperVisibleChanges11">Developer-Visible Changes</h3>
 		<h4 id="Changesinorg.eclipse.sirius.diagram3">Changes in 
 			<code>org.eclipse.sirius.diagram</code>
 		</h4>
@@ -1069,7 +1087,7 @@
 			</li>
 		</ul>
 		<h2 id="sirius6.5.1">Changes in Sirius 6.5.1</h2>
-		<h3 id="DeveloperVisibleChanges11">Developer-Visible Changes</h3>
+		<h3 id="DeveloperVisibleChanges12">Developer-Visible Changes</h3>
 		<h4 id="Migrations5">Migrations</h4>
 		<ul>
 			<li><span class="label label-info">Modified</span> The migration participant 
@@ -1078,7 +1096,7 @@
 			</li>
 		</ul>
 		<h2 id="sirius6.5.0">Changes in Sirius 6.5.0</h2>
-		<h3 id="UserVisibleChanges9">User-Visible Changes</h3>
+		<h3 id="UserVisibleChanges10">User-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-success">Added</span> It is possible to override at the aird level both &#8220;Sirius/Do Refresh on representation opening&#8221; and &#8220;Sirius/Automatic refresh&#8221; preferences. To override the preferences, right-click on the 
 				<code>aird</code> file, select &#8220;Properties&#8221;, and in the dialog go to the &#8220;Sirius settings&#8221; section. The preferences are stored in the project scope and associated to the aird file. For more details, refer the 
@@ -1088,7 +1106,7 @@
 				<a href="user/general/SiriusSessionDetailedInformation.html">documentation</a> .
 			</li>
 		</ul>
-		<h3 id="SpecifierVisibleChanges7">Specifier-Visible Changes</h3>
+		<h3 id="SpecifierVisibleChanges8">Specifier-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-success">Added</span> A new 
 				<code>CellEditor</code> tool is available for feature column mapping of edition table. It allows to define a specific 
@@ -1114,7 +1132,7 @@
 				</ul>
 			</li>
 		</ul>
-		<h3 id="DeveloperVisibleChanges12">Developer-Visible Changes</h3>
+		<h3 id="DeveloperVisibleChanges13">Developer-Visible Changes</h3>
 		<ul>
 			<li><span class="label label-success">Added</span> It is now possible to keep semantic element traceability during the representation export. For now, this option is only supported for diagram SVG export. In this case, a new attribute 
 				<code>diagram:targetSemanticId</code> is added on SVG elements to reference the target semantic id on which the graphical element is based on. This option can be activated programmatically or by setting a preference. See the details below:
